<resources>
    <string name="app_name">MovieApiRetrofit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search Character</string>
    <string name="title_characters">Characters</string>
    <string name="title_reset">Reset</string>
    <string name="text_error">%1$d - Characters not found!</string>
    <string name="_1">1</string>
    <string name="rick_sanchez">Rick Sanchez</string>
    <string name="title_filter">Filter</string>
    <string name="txt_alive">Alive</string>
    <string name="txt_dead">Dead</string>
    <string name="txtunknown">Unknown</string>
    <string name="title_gender">gender</string>
    <string name="txt_female">Female</string>
    <string name="txt_male">Male</string>
    <string name="txt_genderless">Genderless</string>
    <string name="txt_unknown">unknown</string>
    <string name="title_apply">APPLY</string>
    <string name="status">Status</string>
    <string name="todo">TODO</string>
    <string name="txt_alive_detail">Alive</string>
    <string name="_7">7</string>
    <string name="rick_sanchez_detail">Rick Sanchez</string>
    <string name="human">Human</string>
    <string name="todo_todo">TODO</string>
    <string name="clear">Clear</string>
    <string name="title_clear">Clear</string>
</resources>